消息校验与参数填充的代码编写

--- a/cheetah-messages-controller/cheetah-messages-controller-provider/pom.xml
+++ b/cheetah-messages-controller/cheetah-messages-controller-provider/pom.xml
@@ -52,6 +52,17 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.cheetah.message.service.api</groupId>
+            <artifactId>cheetah-messages-service-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
 
