--- a/cheetah-parent/common-base/pom.xml
+++ b/cheetah-parent/common-base/pom.xml
@@ -39,6 +39,10 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-extension</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
 
     </dependencies>
 
