--- a/cheetah-send-messages/cheetah-send-provider/pom.xml
+++ b/cheetah-send-messages/cheetah-send-provider/pom.xml
@@ -64,6 +64,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.cheetah.messages.controller.api</groupId>
+            <artifactId>cheetah-messages-controller-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
