--- a/cheetah-parent/common-dependency/pom.xml
+++ b/cheetah-parent/common-dependency/pom.xml
@@ -25,6 +25,7 @@
         <fastJson.version>1.2.83</fastJson.version>
         <spring-boot-autoconfigure.version>2.3.7.RELEASE</spring-boot-autoconfigure.version>
         <guava.version>31.0.1-jre</guava.version>
+        <dynamic-tp.version>1.0.2</dynamic-tp.version>
     </properties>
 
 
@@ -115,6 +116,26 @@
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>io.github.lyh200</groupId>
+                <artifactId>dynamic-tp-spring-boot-starter-apollo</artifactId>
+                <version>${dynamic-tp.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.github.lyh200</groupId>
+                <artifactId>dynamic-tp-spring-boot-starter-zookeeper</artifactId>
+                <version>${dynamic-tp.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.github.lyh200</groupId>
+                <artifactId>dynamic-tp-all</artifactId>
+                <version>${dynamic-tp.version}</version>
+            </dependency>
+
+
 
 
 
