--- a/cheetah-parent/common-dependency/pom.xml
+++ b/cheetah-parent/common-dependency/pom.xml
@@ -135,6 +135,12 @@
                 <version>${dynamic-tp.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>io.github.lyh200</groupId>
+                <artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
+                <version>${dynamic-tp.version}</version>
+            </dependency>
+
 
 
 
