--- a/xxl-job/cheetah-messages-cron/pom.xml
+++ b/xxl-job/cheetah-messages-cron/pom.xml
@@ -82,6 +82,33 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>io.github.lyh200</groupId>
+			<artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.cheetah.message.dtp.api</groupId>
+			<artifactId>cheetah-messages-dtp-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.xuxueli</groupId>
+			<artifactId>xxl-job-admin</artifactId>
+			<version>2.4.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cheetah.message.cron.api</groupId>
+			<artifactId>cheetah-messages-cron-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
