--- a/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/pom.xml
+++ b/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/pom.xml
@@ -59,6 +59,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.cheetah.message</groupId>
+            <artifactId>common-base</artifactId>
+        </dependency>
 
 
     </dependencies>
