--- a/cheetah-messages-handler/cheetah-messages-handler-provider/pom.xml
+++ b/cheetah-messages-handler/cheetah-messages-handler-provider/pom.xml
@@ -49,6 +49,17 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.cheetah.message.dtp.api</groupId>
+            <artifactId>cheetah-messages-dtp-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
 
