--- a/cheetah-parent/common-dependency/pom.xml
+++ b/cheetah-parent/common-dependency/pom.xml
@@ -26,6 +26,7 @@
         <spring-boot-autoconfigure.version>2.3.7.RELEASE</spring-boot-autoconfigure.version>
         <guava.version>31.0.1-jre</guava.version>
         <dynamic-tp.version>1.0.2</dynamic-tp.version>
+        <apollo.version>1.9.1</apollo.version>
     </properties>
 
 
@@ -147,6 +148,11 @@
                 <version>${dynamic-tp.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.ctrip.framework.apollo</groupId>
+                <artifactId>apollo-client-config-data</artifactId>
+                <version>${apollo.version}</version>
+            </dependency>
 
 
 
