--- a/cheetah-messages-mq/cheetah-messages-mq-provider/pom.xml
+++ b/cheetah-messages-mq/cheetah-messages-mq-provider/pom.xml
@@ -72,6 +72,12 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.cheetah.message.handler.api</groupId>
+            <artifactId>cheetah-messages-handler-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
