调整消费信息相关类的位置

--- a/cheetah-messages-mq/cheetah-messages-mq-provider/pom.xml
+++ b/cheetah-messages-mq/cheetah-messages-mq-provider/pom.xml
@@ -78,6 +78,13 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- amqp依赖，包含Rabbitmq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
     </dependencies>
 
 
