--- a/cheetah-messages-controller/cheetah-messages-controller-provider/pom.xml
+++ b/cheetah-messages-controller/cheetah-messages-controller-provider/pom.xml
@@ -63,6 +63,12 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.cheetah.message.mq.api</groupId>
+            <artifactId>cheetah-messages-mq-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
