--- a/cheetah-parent/common-dependency/pom.xml
+++ b/cheetah-parent/common-dependency/pom.xml
@@ -27,6 +27,7 @@
         <guava.version>31.0.1-jre</guava.version>
         <dynamic-tp.version>1.0.2</dynamic-tp.version>
         <apollo.version>1.9.1</apollo.version>
+        <swagger.version>3.0.0</swagger.version>
     </properties>
 
 
@@ -38,6 +39,12 @@
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter</artifactId>
+                <version>${spring-boot.version}</version>
             </dependency>
 
             <dependency>
@@ -166,7 +173,12 @@
                 <version>${spring-boot.version}</version>
             </dependency>
 
-
+            <!--swagger-->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-boot-starter</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
 
 
 
