--- a/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/src/main/resources/application.yml
+++ b/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/src/main/resources/application.yml
@@ -21,4 +21,11 @@ logging:
     #root: DEBUG
     com.alibaba.nacos.client.config.impl: WARN
 
+dubbo:
+  protocol:
+    name: dubbo
+    port: -1
+  registry:
+    address: nacos://81.68.177.58:8848
+
 
