--- a/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/pom.xml
+++ b/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/pom.xml
@@ -48,6 +48,22 @@
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
         </dependency>
+
+        <!-- Dubbo Registry Nacos -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-registry-nacos</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-starter</artifactId>
+        </dependency>
         <!--zookeeper 注册中心客户端引入 使用的是curator客户端 -->
         <dependency>
             <groupId>org.apache.dubbo</groupId>
