--- a/cheetah-messages-handler/cheetah-messages-handler-provider/pom.xml
+++ b/cheetah-messages-handler/cheetah-messages-handler-provider/pom.xml
@@ -31,18 +31,20 @@
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
         </dependency>
-        <!--zookeeper 注册中心客户端引入 使用的是curator客户端 -->
+
         <dependency>
             <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-dependencies-zookeeper</artifactId>
-            <type>pom</type>
-            <exclusions>
-                <exclusion>
-                    <artifactId>slf4j-log4j12</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
+            <artifactId>dubbo-registry-nacos</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-starter</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.cheetah.message.handler.api</groupId>
             <artifactId>cheetah-messages-handler-api</artifactId>
