--- a/cheetah-parent/common-dependency/pom.xml
+++ b/cheetah-parent/common-dependency/pom.xml
@@ -31,6 +31,8 @@
         <nacos.version>1.0.7</nacos.version>
         <nacos-config.version>0.2.3</nacos-config.version>
         <nacos-client.version>1.1.4</nacos-client.version>
+        <mysql.version>8.0.22</mysql.version>
+        <jdbc.version>5.1.3.RELEASE</jdbc.version>
     </properties>
 
 
@@ -207,6 +209,18 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-boot-starter</artifactId>
                 <version>${swagger.version}</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${jdbc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
             </dependency>
 
 
