添加mybatis-plus日志输出的配置

--- a/cheetah-messages-service/cheetah-messages-service-impl/src/main/resources/application.yml
+++ b/cheetah-messages-service/cheetah-messages-service-impl/src/main/resources/application.yml
@@ -33,6 +33,9 @@ nacos:
       enable: true
       log-enable: true
 
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 
 
