--- a/cheetah-messages-service/cheetah-messages-service-impl/src/main/resources/application.yml
+++ b/cheetah-messages-service/cheetah-messages-service-impl/src/main/resources/application.yml
@@ -26,7 +26,7 @@ nacos:
   config:
     server-addr: 81.68.177.58:8848
     type: yaml
-    data-ids: application.yml
+    data-ids: cheetah-messages-service.yml
     auto-refresh: true
     group: DEFAULT_GROUP
     bootstrap:
