--- a/cheetah-messages-handler/cheetah-messages-handler-provider/src/main/resources/application.yml
+++ b/cheetah-messages-handler/cheetah-messages-handler-provider/src/main/resources/application.yml
@@ -21,7 +21,7 @@ nacos:
   config:
     server-addr: 81.68.177.58:8848
     type: yaml
-    data-ids: application.yml
+    data-ids: cheetah-messages-handler.yml
     auto-refresh: true
     group: DEFAULT_GROUP
     bootstrap:
