--- a/cheetah-send-messages/cheetah-send-provider/src/main/resources/application.yml
+++ b/cheetah-send-messages/cheetah-send-provider/src/main/resources/application.yml
@@ -22,7 +22,7 @@ nacos:
   config:
     server-addr: 81.68.177.58:8848
     type: yaml
-    data-ids: application.yml
+    data-ids: cheetah-send-messages.yml
     auto-refresh: true
     group: DEFAULT_GROUP
     bootstrap:
