--- a/cheetah-messages-controller/cheetah-messages-controller-provider/src/main/resources/application.yml
+++ b/cheetah-messages-controller/cheetah-messages-controller-provider/src/main/resources/application.yml
@@ -21,11 +21,12 @@ nacos:
   config:
     server-addr: 81.68.177.58:8848
     type: yaml
-    data-ids: cheetah-messages-controller.yml
+    data-id: cheetah-messages-controller.yml
     auto-refresh: true
     group: DEFAULT_GROUP
     bootstrap:
       enable: true
-      log-enable: true
+      log:
+        enable: true
 
 
