--- a/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/src/main/resources/application.yml
+++ b/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/src/main/resources/application.yml
@@ -9,12 +9,13 @@ nacos:
   config:
     server-addr: 81.68.177.58:8848
     type: yaml
-    data-ids: dynamic-tp-nacos-dtp.yml
+    data-id: dynamic-tp-nacos-dtp.yml
     auto-refresh: true
     group: DEFAULT_GROUP
     bootstrap:
       enable: true
-      log-enable: true
+      log:
+        enable: true
 
 logging:
   level:
