--- a/cheetah-messages-mq/cheetah-messages-mq-provider/src/main/resources/application.yml
+++ b/cheetah-messages-mq/cheetah-messages-mq-provider/src/main/resources/application.yml
@@ -33,10 +33,11 @@ nacos:
   config:
     server-addr: 81.68.177.58:8848
     type: yaml
-    data-ids: cheetah-messages-handler.yml
+    data-id: cheetah-messages-handler.yml
     auto-refresh: true
     group: DEFAULT_GROUP
     bootstrap:
       enable: true
-      log-enable: true
+      log:
+        enable: true
 
