--- a/xxl-job/cheetah-messages-cron/src/main/resources/application.yml
+++ b/xxl-job/cheetah-messages-cron/src/main/resources/application.yml
@@ -22,12 +22,13 @@ nacos:
   config:
     server-addr: 81.68.177.58:8848
     type: yaml
-    data-ids: dynamic-tp-cron-nacos-dtp.yml
+    data-id: dynamic-tp-cron-nacos-dtp.yml
     auto-refresh: true
     group: DEFAULT_GROUP
     bootstrap:
       enable: true
-      log-enable: true
+      log:
+        enable: true
 
 xxl:
   job:
