--- a/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/src/main/resources/dynamic-tp-nacos-dtp.yml
+++ b/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/src/main/resources/dynamic-tp-nacos-dtp.yml
@@ -5,7 +5,7 @@ spring:
       enabled: true
       enabledBanner: true           # 是否开启banner打印，默认true
       enabledCollect: true          # 是否开启监控指标采集，默认false
-      collectorType: micrometer     # 监控数据采集器类型（JsonLog | MicroMeter），默认logging
+      collectorType: logging        # 监控数据采集器类型（JsonLog | MicroMeter），默认logging
       monitorInterval: 5            # 监控时间间隔（报警判断、指标采集），默认5s
       nacos: # nacos配置，不配置有默认值，cloud应用不需要配置
         dataId: dynamic-tp-nacos-dtp.yml
@@ -28,7 +28,7 @@ spring:
           rejectedHandlerType: CallerRunsPolicy    # 拒绝策略，查看RejectedTypeEnum枚举类
           keepAliveTime: 50
           allowCoreThreadTimeOut: false
-          threadNamePrefix: austin-           # 线程名前缀
+          threadNamePrefix: cheetah-           # 线程名前缀
         - threadPoolName: execute-xxl-thread-pool
           corePoolSize: 3
           maximumPoolSize: 3
