minor code fixes

--- a/cheetah-messages-controller/cheetah-messages-controller-provider/src/main/resources/application.yml
+++ b/cheetah-messages-controller/cheetah-messages-controller-provider/src/main/resources/application.yml
@@ -29,4 +29,12 @@ nacos:
       log:
         enable: true
 
+cheetah:
+  business:
+    topic:
+      name: send.messages.direct
+    recall:
+      topic:
+        name: recall.messages.direct
+
 
