--- a/xxl-job/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job/xxl-job-admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### web
-server.port=8080
+server.port=8808
 server.servlet.context-path=/xxl-job-admin
 
 ### actuator
@@ -23,9 +23,9 @@ mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.xxl.job.admin.core.model
 
 ### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cheetah_xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://81.68.177.58:8080/cheetah_xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root_pwd
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ### datasource-pool
