修复服务启动遇见的bug以及调整版本不匹配的问题

--- a/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/pom.xml
+++ b/cheetah-messages-dynamic-tp/cheetah-messages-dtp-provider/pom.xml
@@ -22,6 +22,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
         </dependency>
@@ -63,18 +67,6 @@
         <dependency>
             <groupId>com.alibaba.boot</groupId>
             <artifactId>nacos-config-spring-boot-starter</artifactId>
-        </dependency>
-        <!--zookeeper 注册中心客户端引入 使用的是curator客户端 -->
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-dependencies-zookeeper</artifactId>
-            <type>pom</type>
-            <exclusions>
-                <exclusion>
-                    <artifactId>slf4j-log4j12</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.cheetah.message</groupId>
