--- a/cheetah-parent/common-dependency/pom.xml
+++ b/cheetah-parent/common-dependency/pom.xml
@@ -19,7 +19,7 @@
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
         <lombok-version>1.18.22</lombok-version>
         <cheetah-parent>0.0.1-SNAPSHOT</cheetah-parent>
-        <dubbo.version>2.7.1</dubbo.version>
+        <dubbo.version>2.7.3</dubbo.version>
         <mybatis-plus.version>3.4.2</mybatis-plus.version>
         <hutool.version>5.7.15</hutool.version>
         <fastJson.version>1.2.83</fastJson.version>
@@ -30,7 +30,7 @@
         <swagger.version>3.0.0</swagger.version>
         <nacos.version>1.0.7</nacos.version>
         <nacos-config.version>0.2.3</nacos-config.version>
-        <nacos-client.version>1.1.4</nacos-client.version>
+        <nacos-client.version>1.1.3</nacos-client.version>
         <mysql.version>8.0.22</mysql.version>
         <jdbc.version>5.1.3.RELEASE</jdbc.version>
     </properties>
@@ -49,6 +49,12 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
 
@@ -95,19 +101,6 @@
             </dependency>
 
 
-            <!--zookeeper 注册中心客户端引入 使用的是curator客户端 -->
-            <dependency>
-                <groupId>org.apache.dubbo</groupId>
-                <artifactId>dubbo-dependencies-zookeeper</artifactId>
-                <version>${dubbo.version}</version>
-                <type>pom</type>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>slf4j-log4j12</artifactId>
-                        <groupId>org.slf4j</groupId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
 
             <dependency>
                 <groupId>com.baomidou</groupId>
