修复服务启动遇见的bug

--- a/cheetah-messages-handler/cheetah-messages-handler-provider/pom.xml
+++ b/cheetah-messages-handler/cheetah-messages-handler-provider/pom.xml
@@ -51,16 +51,16 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>com.cheetah.message.dtp.api</groupId>
-            <artifactId>cheetah-messages-dtp-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.lyh200</groupId>
+            <artifactId>dynamic-tp-core</artifactId>
+            <version>1.0.2</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
