--- a/xxl-job/cheetah-messages-cron/src/main/resources/application.yml
+++ b/xxl-job/cheetah-messages-cron/src/main/resources/application.yml
@@ -4,7 +4,49 @@ server:
 spring:
   application:
     name: cheetah-messages-cron
-
+  dynamic:
+    tp:
+      enabled: true
+      enabledBanner: true           # 是否开启banner打印，默认true
+      enabledCollect: true          # 是否开启监控指标采集，默认false
+      collectorType: micrometer        # 监控数据采集器类型（JsonLog | MicroMeter），默认logging
+      monitorInterval: 5            # 监控时间间隔（报警判断、指标采集），默认5s
+      nacos: # nacos配置，不配置有默认值，cloud应用不需要配置
+        dataId: dynamic-tp-nacos-cron-dtp.yml
+        group: DEFAULT_GROUP
+      configType: yml
+      platforms:
+        - platform: wechat
+          urlKey: 38aa7eff500-1287
+          receivers: nacos
+        - platform: ding
+          urlKey: f80dad441fcd65bac48473d4a88dcd6a
+          secret: SECb544445a6a34f0315d08b17de41
+          receivers: 18888888888
+      executors:
+        - threadPoolName: execute-xxl-thread-pool
+          corePoolSize: 3
+          maximumPoolSize: 3
+          queueCapacity: 200
+          queueType: VariableLinkedBlockingQueue   # 任务队列，查看源码QueueTypeEnum枚举类
+          rejectedHandlerType: CallerRunsPolicy    # 拒绝策略，查看RejectedTypeEnum枚举类
+          keepAliveTime: 50
+          allowCoreThreadTimeOut: false
+          threadNamePrefix: cheetah-           # 线程名前缀
+          notifyItems: # 报警项，不配置自动会配置（变更通知、容量报警、活性报警、拒绝报警）
+            - type: capacity               # 报警项类型，查看源码 NotifyTypeEnum枚举类
+              enabled: true
+              threshold: 80                # 报警阈值
+              platforms: [ ding,wechat ]     # 可选配置，不配置默认拿上层platforms配置的所以平台
+              interval: 120                # 报警间隔（单位：s）
+            - type: change
+              enabled: true
+            - type: liveness
+              enabled: true
+              threshold: 80
+            - type: reject
+              enabled: true
+              threshold: 1
 logging:
   level:
     #root: DEBUG
@@ -36,6 +78,14 @@ xxl:
       address: http://127.0.0.1:8808/xxl-job-admin
       username: admin
       password: 123456
+    executor:
+      appname: xxl-job-executor-cron
+      ip:
+      port: 6666
+      jobHandlerName: cheetahJob
+      logpath: logs/xxl
+      logretentiondays: 30
+    accessToken: default_token
 
 
 
