--- a/cheetah-messages-controller/cheetah-messages-controller-provider/pom.xml
+++ b/cheetah-messages-controller/cheetah-messages-controller-provider/pom.xml
@@ -70,6 +70,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.cheetah.message.handler.api</groupId>
+            <artifactId>cheetah-messages-handler-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
