修复mq监听不到消息以及一些启动bug

--- a/cheetah-messages-handler/cheetah-messages-handler-provider/src/main/resources/application.yml
+++ b/cheetah-messages-handler/cheetah-messages-handler-provider/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8878
+  port: 8828
 
 spring:
   application:
@@ -59,6 +59,12 @@ dubbo:
     port: -1
   registry:
     address: nacos://81.68.177.58:8848
+  provider:
+    timeout: 30000
+    check: false
+  consumer:
+    timeout: 30000
+    check: false
 
 nacos:
   config:
@@ -79,4 +85,4 @@ messages:
     data-id: local.properties
     group: DEFAULT_GROUP
     bootstrap:
-      enable: true
+      enable: false
