--- a/cheetah-messages-controller/cheetah-messages-controller-provider/pom.xml
+++ b/cheetah-messages-controller/cheetah-messages-controller-provider/pom.xml
@@ -25,7 +25,10 @@
             <artifactId>cheetah-messages-controller-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!--duboo依赖-->
         <dependency>
             <groupId>org.apache.dubbo</groupId>
