--- a/cheetah-messages-service/cheetah-messages-service-impl/pom.xml
+++ b/cheetah-messages-service/cheetah-messages-service-impl/pom.xml
@@ -21,7 +21,10 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.cheetah.message</groupId>
             <artifactId>common-base</artifactId>
