添加钉钉自定义机器人工作消息的处理

--- a/cheetah-messages-handler/cheetah-messages-handler-provider/src/main/resources/application.yml
+++ b/cheetah-messages-handler/cheetah-messages-handler-provider/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
 spring:
   application:
     name: cheetah-messages-handler
+  redis:
+    host:
+    port:
+    password:
   dynamic:
     tp:
       enabled: true
