--- a/cheetah-messages-handler/cheetah-messages-handler-provider/pom.xml
+++ b/cheetah-messages-handler/cheetah-messages-handler-provider/pom.xml
@@ -25,6 +25,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <!--阿里云 钉钉 SDK-->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>alibaba-dingtalk-service-sdk</artifactId>
+        </dependency>
         <!--duboo依赖-->
         <dependency>
             <groupId>org.apache.dubbo</groupId>
