--- a/cheetah-parent/common-dependency/pom.xml
+++ b/cheetah-parent/common-dependency/pom.xml
@@ -33,6 +33,7 @@
         <nacos-client.version>1.1.3</nacos-client.version>
         <mysql.version>8.0.22</mysql.version>
         <jdbc.version>5.1.3.RELEASE</jdbc.version>
+        <dingding.version>2.0.0</dingding.version>
     </properties>
 
 
@@ -50,6 +51,19 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
                 <version>${spring-boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
+            <!--阿里云 钉钉 SDK-->
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>alibaba-dingtalk-service-sdk</artifactId>
+                <version>${dingding.version}</version>
             </dependency>
 
             <dependency>
